--- a/src/css/aboutStyles.css
+++ b/src/css/aboutStyles.css
@@ -12,7 +12,7 @@
 
     .hero-text {
         position: absolute;
-        font-size: 6rem;
+        font-size: clamp(2.75rem, 10vw, 6rem);
         bottom: 50%;
     }
 }
@@ -28,7 +28,7 @@
     scrollbar-width: none;
 
     .second h4 {
-        font-size: 1.75rem;
+        font-size: clamp(0.75rem, 5vw, 1.75rem);
         font-style: italic;
         font-weight: 900;
         margin-top: 16px;
@@ -61,15 +61,15 @@
 }
 
 .section-title {
-    font-size: 2.25rem;
+    font-size: clamp(1.25rem, 5vw, 2.25rem);
 }
 
 .about-text .description {
     margin-top: 16px;
 
     p {
-        font-size: 1.5rem;
+        font-size: clamp(0.5rem, 5vw, 1.5rem);
         font-family: "Franklin Gothic Book", sans-serif;
-        line-height: 35px;
+        line-height: clamp(24px, 5vw, 32px);
     }
 }
