--- a/src/css/menuStyles.css
+++ b/src/css/menuStyles.css
@@ -35,13 +35,13 @@
 
 .menu {
     display: grid;
-    grid-template-columns: repeat(4, 100%);
+    grid-template-columns: repeat(auto-fit, minmax(100vh, 1fr));
+    gap: 10px;
     height: 100%;
     width: 100%;
-    border: 1px solid #fff;
+    border: 1px solid #f2f2f2;
     overflow-x: scroll;
     scrollbar-width: 0;
-    scroll-snap-align: start;
 
     [class$="grid"] {
         display: grid;
@@ -61,12 +61,14 @@
 
             .name {
                 position: absolute;
-                top: 35%;
+                top: 0;
+                bottom: 0;
                 width: 100%;
-                padding: 10px 5px;
-                border: 5px solid #fff;
+                padding: 5px;
                 color: #f2f2f2;
-                font-size: 2.75rem;
+                border: 5px solid #f2f2f2;
+                font-size: clamp(1.5rem, 3vw, 2.25rem);
+                overflow-wrap: break-word;
                 text-align: center;
                 text-transform: uppercase;
                 opacity: 0;
@@ -82,7 +84,7 @@
     .header {
         position: relative;
         writing-mode: sideways-lr;
-        font-size: 3rem;
+        font-size: 2.25rem;
         text-align: center;
         padding: 0 24px;
     }
@@ -92,17 +94,19 @@
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 
     .pizza {
-        background-size: cover;
         width: 100%;
         height: 100%;
     }
 
     .item:first-child .pizza {
         background-image: url(../img/pizzas/bbq_chicken_pizza_warda-naeem-unsplash.png);
+        background-size: cover;
     }
     
     .item:nth-child(2) .pizza {
         background-image: url(../img/pizzas/pepperoni_pizza_david-foodphototasty-unsplash.png);
+        background-size: cover;
+        background-position: center;
     }
 
     .item:nth-child(3) .pizza {
@@ -126,12 +130,13 @@
 
     .item:last-child .pizza {
         background-image: url(../img/pizzas/spinach_pizza_engin-akyurt-unsplash.png);
+        background-size: cover;
         background-position: center;
     }
 }
 
 .appetizer-grid {
-    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
 
     .appetizer {
         background-size: cover;
@@ -149,7 +154,6 @@
     
     .item:last-child .appetizer {
         background-image: url(../img/appetizers/French_Onion_Dip_Cups.png);
-        background-size: 100%;
         background-repeat: no-repeat;
         background-position: 50% 50%;
         grid-column: 1 / 3;
@@ -158,11 +162,9 @@
 
 .beverage-grid {
     grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
-    grid-template-rows: 100%;
 
     .beverage {
-        background-size: 195%;
-        background-position: 35% 50%;
+        background-size: cover;
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
@@ -170,26 +172,27 @@
 
     .item:first-child .beverage {
         background-image: url(../img/beverages/iced_tea_crystal-tubens-unsplash.jpg);
-        background-size: cover;
+        background-position: 45% 75%;
     }
 
     .item:nth-child(2) .beverage {
         background-image: url(../img/beverages/mango_shake_alexander-mils-unsplash.jpg);
+        background-position: center;
     }
 
     .item:nth-child(3) .beverage {
         background-image: url(../img/beverages/strawberry_shake_vd-photography-unsplash.jpg);
+        background-position: center;
     }
 
     .item:last-child .beverage {
         background-image: url(../img/beverages/pepsi_nikhil-unsplash.jpg);
         background-position: 75% 75%;
-        background-size: cover;
     }
 }
 
 .dessert-grid {
-    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
     
     .dessert {
         background-size: cover;
