--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,7 +36,7 @@ body {
     }
 
     .nav-btn {
-        padding: 16px 32px;
+        padding: 16px;
         border: 0;
         background-color: transparent;
         font-weight: 800;
@@ -47,6 +47,7 @@ body {
     .nav-btn:focus {
         background-color: #f2f2f2;
         color: #080808;
+        outline: none;
     }
 }
 
@@ -58,28 +59,30 @@ body {
 
 .footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     padding: 30px 15px;
 
     .restaurant-name {
-        font-size: 1.75rem;
+        font-size: clamp(1rem, 5vw, 1.75rem);
+        text-align: center;
         margin-right: 15px;
+        width: 50%;
     }
     
     .social-media-icons {
         display: flex;
-        justify-content: space-around;
-        width: 15%;
+        width: 50%;
         align-items: center;
     
-        font-size: 2.25rem;
-        
+        font-size: clamp(1.5rem, 5vw, 2.25rem);
+
         .fa-square-instagram {
-            font-size: 2.5rem;
+            font-size: clamp(1.5rem, 5vw, 2.5rem);
         }
 
         > * {
+            width: 100%;
             cursor: pointer;
         }
     }
